--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~11.2.10",
     "@tailwindcss/forms": "^0.5.0",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.4.9",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
