--- a/angular.json
+++ b/angular.json
@@ -20,7 +20,7 @@
             "outputPath": "dist/quizz",
             "index": "src/index.html",
             "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "aot": true,
             "assets": [
@@ -65,18 +65,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "quizz:build"
+            "buildTarget": "quizz:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "quizz:build:production"
+              "buildTarget": "quizz:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "quizz:build"
+            "buildTarget": "quizz:build"
           }
         },
         "test": {
