--- a/package.json
+++ b/package.json
@@ -19,35 +19,33 @@
     "@angular/platform-browser": "^17.3.12",
     "@angular/platform-browser-dynamic": "^17.3.12",
     "@angular/router": "^17.3.12",
-    "@tailwindcss/forms": "~0.3.4",
-    "rxjs": "~6.6.0",
-    "sweetalert2": "^11.4.9",
-    "tslib": "^2.0.0",
+    "@tailwindcss/forms": "~0.5.7",
+    "rxjs": "~7.8.1",
+    "sweetalert2": "^11.7.27",
+    "tslib": "^2.6.2",
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.3.9",
     "@angular/cli": "^17.3.9",
     "@angular/compiler-cli": "^17.3.12",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "@typescript-eslint/parser": "^5.20.0",
-    "autoprefixer": "^10.4.4",
-    "codelyzer": "^6.0.0",
-    "eslint": "^8.13.0",
-    "jasmine-core": "~3.8.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "^6.1.2",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.7.0",
-    "postcss": "^8.4.12",
-    "protractor": "~7.0.0",
-    "tailwindcss": "~2.2.19",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
+    "@types/jasmine": "~5.1.4",
+    "@types/node": "^20.12.12",
+    "@typescript-eslint/eslint-plugin": "^7.16.0",
+    "@typescript-eslint/parser": "^7.16.0",
+    "autoprefixer": "^10.4.20",
+    "codelyzer": "^6.0.2",
+    "eslint": "^8.56.0",
+    "jasmine-core": "~5.1.2",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "^6.4.3",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.1",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.4.1",
+    "ts-node": "~10.9.2",
     "typescript": "~5.4.5"
   }
 }
